# multi_robot_slam

./: .gitattributes  .gitignore  README.md
src/ipb_ros2_sim/: .clang-format  CMakeLists.txt  package.xml
src/ipb_ros2_sim/config/: robot_config.yaml
src/ipb_ros2_sim/config/bridge/: actor_config.yaml  camera_config.yaml  robot_camera_config.yaml  robot_config.yaml  sim_config.yaml
src/ipb_ros2_sim/config/rviz/: sim.rviz
src/ipb_ros2_sim/config/simulation/: empty.yaml  indoor.yaml  indoor_actors.yaml  indoor_multi.yaml  outdoor.yaml
src/ipb_ros2_sim/description/actors/female/: female.dae  female.sdf
src/ipb_ros2_sim/description/actors/male/: male.dae  male.sdf
src/ipb_ros2_sim/description/husky/meshes/: base_link.dae  bumper.dae  bumper_extension.dae  top_chassis.dae  top_plate.dae  top_plate.stl  user_rail.dae  wheel.dae
src/ipb_ros2_sim/description/husky/urdf/: decorations.urdf.xacro  husky.urdf.xacro  wheel.urdf.xacro
src/ipb_ros2_sim/description/jackal/meshes/: jackal-base.stl  jackal-fender.stl  jackal-wheel.stl
src/ipb_ros2_sim/description/jackal/urdf/: jackal.urdf.xacro  wheel.urdf.xacro
src/ipb_ros2_sim/description/plates/meshes/: ipb.stl  numbers.scad  robot0.stl  robot1.stl  robot2.stl  robot3.stl  robot4.stl  robot5.stl  (+4 more)
src/ipb_ros2_sim/launch/: actor.launch.py  all.launch.py  slam.launch.py
src/ipb_ros2_sim/nodes/: actor_path_publisher.py
src/ipb_ros2_sim/src/: camera_bridge.cpp
src/ipb_ros2_sim/world/agri_world/: agri.world
src/ipb_ros2_sim/world/empty_world/: empty.world
src/ipb_ros2_sim/world/office_world/: office.world
(+447 files in other folders)
